--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                     data-price="15000">洋装プランC〈30分〉</button>
             </div>
             <div class="highlight-background">
-                <span class="highlight-text">ブライダルコース：オプション</span>
+                <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
@@ -807,7 +807,7 @@
                     data-price="15000">スピードコース〈90分〉</button>
             </div>
             <div class="highlight-background">
-                <span class="highlight-text">シェービングコース：オプション</span>
+                <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
                 <button type="button" id="fourthirradiations" onclick="selectirradiations(this)"
@@ -840,7 +840,7 @@
                     data-price="15000">ベーシックマッサージ〈30分〉</button>
             </div>
             <div class="highlight-background">
-                <span class="highlight-text">マッサージコース：オプション</span>
+                <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
                 <button type="button" id="twelvethirradiations" onclick="selectirradiations(this)"
@@ -1045,12 +1045,16 @@
                 if (irradiationButton) irradiationButton.click();
             });
 
-            // 希望日時エリアまでスムーズスクロール
-            const targetElement = document.querySelector('.label:contains("希望日時")');
-            if (targetElement) {
-                targetElement.scrollIntoView({ behavior: 'smooth' });
-            }
-        }
+const targetElement = document.getElementById('calendar1');
+if (targetElement) {
+    targetElement.scrollIntoView({ behavior: 'smooth', block: 'start' }); // まずカレンダーへスクロール
+
+    // 少し下にずらす（300pxなど調整可能）
+    setTimeout(() => {
+        window.scrollBy({ top: 150, behavior: 'smooth' });
+    }, 500); // スクロール完了まで少し待つ（500msが目安）
+}
+}
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
