--- a/index.html
+++ b/index.html
@@ -1045,15 +1045,11 @@
                 if (irradiationButton) irradiationButton.click();
             });
 
-const targetElement = document.getElementById('calendar1');
-if (targetElement) {
-    targetElement.scrollIntoView({ behavior: 'smooth', block: 'start' }); // まずカレンダーへスクロール
-
-    // 少し下にずらす（300pxなど調整可能）
-    setTimeout(() => {
-        window.scrollBy({ top: 150, behavior: 'smooth' });
-    }, 500); // スクロール完了まで少し待つ（500msが目安）
-}
+    // ✅ ここでカレンダーへスクロール
+    const targetElement = document.getElementById('calendar1');
+    if (targetElement) {
+        targetElement.scrollIntoView({ behavior: 'smooth', block: 'center' });
+    }
 }
 
         function updateDisplayInfo() {
