--- a/index.html
+++ b/index.html
@@ -1045,11 +1045,15 @@
                 if (irradiationButton) irradiationButton.click();
             });
 
-    // ✅ ここでカレンダーへスクロール
-    const targetElement = document.getElementById('calendar1');
-    if (targetElement) {
-        targetElement.scrollIntoView({ behavior: 'smooth', block: 'center' });
-    }
+const targetElement = document.getElementById('calendar1');
+if (targetElement) {
+    targetElement.scrollIntoView({ behavior: 'smooth', block: 'start' }); // まずカレンダーへスクロール
+
+    // 少し下にずらす（300pxなど調整可能）
+    setTimeout(() => {
+        window.scrollBy({ top: 50, behavior: 'smooth' });
+    }, 500); // スクロール完了まで少し待つ（500msが目安）
+}
 }
 
         function updateDisplayInfo() {
