--- a/index.html
+++ b/index.html
@@ -1058,14 +1058,10 @@ function applyPreviousSelection() {
         }
     });
 
-    // ✅ カレンダーにスクロール
+    // ✅ ここでカレンダーへスクロール
     const targetElement = document.getElementById('calendar1');
     if (targetElement) {
-        targetElement.scrollIntoView({ behavior: 'smooth', block: 'start' });
-
-        setTimeout(() => {
-            window.scrollBy({ top: 50, behavior: 'smooth' });
-        }, 500);
+        targetElement.scrollIntoView({ behavior: 'smooth', block: 'center' });
     }
 }
 
