--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
             text-indent: 20px;
             position: relative;
             overflow: hidden;
-            border-top: 1px solid black;
+            border-top: 2px solid black;
             /* 上の線 */
-            border-bottom: 1px solid black;
+            border-bottom: 2px solid black;
             /* 下の線 */
         }
 
@@ -149,9 +149,9 @@
             text-indent: 0px;
             position: relative;
             overflow: hidden;
-            border-top: 1px solid black;
+            border-top: 2px solid black;
             /* 上の線 */
-            border-bottom: 1px solid black;
+            border-bottom: 2px solid black;
             /* 下の線 */
         }
 
@@ -205,6 +205,11 @@
             box-sizing: border-box;
             font-size: 16px;
             transition: all 0.3s;
+
+            /* 以下を追加 */
+            position: relative;
+            top: -5px;
+            /* ← 上に5pxずらす（数値調整OK） */
         }
 
         .visit-buttons,
@@ -964,10 +969,10 @@
             </div>
         </div>
 
-        <div class="labelContent">メッセージ<br>（質問等お気軽にご記入ください）</div>
+        <div class="label">メッセージ<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
-        <div class="labelContent">ご予約内容</div>
+        <div class="label">ご予約内容</div>
         <div id="displayInfo"></div> <!-- ここに選択された情報を表示します -->
 
         <button class="submit-button" onclick="submitForm()" div id="section-message">予約を行う</button>
