--- a/index.html
+++ b/index.html
@@ -1374,6 +1374,9 @@
                 });
             }
 
+    // 🔽 ここで日付選択もリセット
+    selectedFullDate = '';
+
             // 表示を更新
             updateDisplayInfo();
         }
@@ -1468,6 +1471,9 @@ function showMenu(menu) {
     menuPrice = 0;
     optionsPrice = 0;
     totalAmount = 0;
+
+    // 🔽 ここで日付選択もリセット
+    selectedFullDate = '';
 
     // 表示を更新
     updateDisplayInfo();
