--- a/index.html
+++ b/index.html
@@ -1562,6 +1562,11 @@ if (menu === 'Kyousitu') {
                 return;
             }
 
+            if (!formData.dates) {
+                alert('希望日時を選択してください。');
+                return;
+            }
+
     // メッセージを組み立て
     let message = `【予約フォーム】
 1人目お名前：${formData.name1}
