--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
                 <span class="highlight-text">◆占い教室◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment21')" data-price="4000">タロット講座</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment21')"  data-price="4000">タロット講座</button>
                 <div class="info-texturanai">⇧タップしてください⇧<br>毎月第1、第3火曜日で希望日をご入力ください。<br>例.7月第1火曜日</div>
                 <input type="text" id="kibounitizi" placeholder="希望日を入力してください">
             </div>
@@ -1566,12 +1566,8 @@ if (menu === 'Kyousitu') {
                 return;
             }
 
-// 希望日時チェック
-if (
-    !formData.dates[0] &&  // 日付が未選択
-    !(formData.selectedSymptom && formData.selectedSymptom.trim() === 'タロット講座' && formData.kibounitizi)
-) {
-    alert('希望日時を選択してください。');
+if (!formData.dates[0] && !formData.kibounitizi) {
+    alert('希望日時が未入力です。');
     return;
 }
 
