--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
 
     <div class="container">
         <h1>
-            <span style="font-size: 18px;">すずき写真事務所</span><br>
+            <span style="font-size: 18px;">すaaaaずき写真事務所</span><br>
             和装レンタル<br>
             <div class="info-text">
                 こちらのフォームは携帯専用です。<br>パソコンからは送信できません
@@ -939,7 +939,7 @@
             【パスワード】001
 
             <br><br>
-            <a href="https://lin.ee/QXg9iGy"
+            <a href="https://lin.ee/PUNN4gO"
                 target="_blank" rel="noopener noreferrer">
                 ＞＞衣装レンタル料金表＜＜
             </a><br>
