--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2007859888-wB5PzjB5'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -1196,6 +1196,11 @@
         <div class="info-row">
             <p>${selectedSymptomText}</p>
             <button class="edit-button" onclick="scrollToElement('beautifuleyebrows'); scrollToElement('shinyskin'); scrollToElement('Cosmetologyasawhole');">修正する</button>
+        </div>
+        <hr>
+        <div class="info-row">
+            <p>${irradiationsText}</p>
+            <button class="edit-button" onclick="scrollToElement('firstirradiations')">修正</button>
         </div>
         <hr>
         <div class="info-row">
@@ -1591,12 +1596,12 @@
                 : 'メニュー未選択';
                 
             const irradiationsText = formData.irradiationsCount
-                ? `≪オプション≫\n${formData.irradiationsCount}\n`
+                ? `\n≪オプション≫\n${formData.irradiationsCount}\n`
                 : '';
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【ご予約内容】\n\n≪お名前≫：${formData.name}\n\n≪電話番号≫：${formData.phone}\n\n≪性別≫：${formData.visitCount}\n\n≪メニュー≫\n${selectedSymptomText}${irradiationsText}\n≪お悩みの症状≫：${formData.tellmetheaddress}\n\n【希望日時】\n≪第一希望日≫\n${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n${formatDate(formData.dates[1])}\n\n≪第三希望日≫\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n${formData.message}`
+                text: `【ご予約内容】\n\n≪お名前≫：${formData.name}\n\n≪電話番号≫：${formData.phone}\n\n≪性別≫：${formData.visitCount}\n\n≪メニュー≫\n${selectedSymptomText}${irradiationsText}\n≪お悩みの症状≫\n${formData.tellmetheaddress}\n\n【希望日時】\n≪第一希望日≫\n${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n${formatDate(formData.dates[1])}\n\n≪第三希望日≫\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
